	reinstated the hotfix removed into version 1.9.0, forcing IP connection when using FQDN; fact is, some people still have issues even with openssl 1.1.x (unable to reproduce, may depend on a specific configuration). more details here: https://github.com/FreeRDP/FreeRDP/issues/4525#issuecomment-380635647
	improved performance mitigation in case of high latency network

2018-05-24 Version 1.9.0 (stable)
	resynced FreeRDP (version 2.0-RC2-dev3), now using the openssl 1.1.x architecture. Should fix any previously reported FQDN and NLA issues
	added a pdf virtual printer; any document printed with the "Myrtille PDF" printer is downloaded to the browser and can be opened/saved/printed from there
	pdf content is now downloaded into an hidden iframe, instead of a new tab, to prevent popup blockers to block it
	added a client ip tracking option to prevent unauthorized accesses. configurable into web.config (thanks bigpjo)
	cookieless sessions are now disabled by default. This lowers the risk of session stealing (by simply copying the url) but also removes the ability to have multiple connections/tabs. can still be enabled into web.config, but use at your own risk! (thanks bigpjo)
	strengthened security to prevent session fixation attack or spoofing if cookieless sessions are enabled
	the remote session can now be shared with a new toolbar button that generates a one time usage url. can be disabled into web.config. (thanks bigpjo)
	a shared session now can't be disconnected by a guest. (thanks bigpjo)
	security fixes with enterprise mode to ensure that shared sessions do not give access to owner hosts. (thanks bigpjo)
	added an option to enterprise mode to allow hosts to be restricted to specific users (by username). (thanks bigpjo)
	enterprise mode now have a better reporting of login failures and includes a change password dialog if the user is required to change it. (thanks bigpjo)